oopsy: fix offcenter live list icons
This is a fixup for #3574, which caused these to be offcenter.

--- a/ui/oopsyraidsy/oopsy_live.css
+++ b/ui/oopsyraidsy/oopsy_live.css
@@ -102,6 +102,7 @@ div {
 .mistake-icon {
   flex: 0 0 auto;
   order: 1;
+  justify-content: center;
 }
 
 .mistake-text {
